# My-Scripts

./: .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .sql-lintrc.json  .sqlfluffrc  ARCHITECTURE.md  Apply-ACL.ps1  CHANGELOG.md  CI_INVESTIGATION_REPORT.md  CONTRIBUTING.md  ClearOldRecycleBinItems.ps1  ConvertTo-Jpeg.ps1  DeleteOldDownloads.ps1  FileDistributor.ps1  INSTALLATION.md  LICENSE  README.md  Remove-DuplicateFiles.ps1  Remove-EmptyFolders.ps1  SelObj.ps1  Sync-MacriumBackups.ps1  SyncRepoToTarget.ps1  TEST_SCENARIOS_v2.6.0.md  cleanup-git-branches.ps1  cloudconvert_driver.ps1  cloudconvert_upload.ps1  cloudconvert_utils.py  codecov.yml  crop_black.py  crop_colours.py  csv-to-gpx.py  drive_space_monitor.py  elevation.py  extract_timeline_locations.py  find-duplicate-images.py  gnucash_hide_zero_balance_accts.sql  (+24 more)
.github/: RELEASE_CHECKLIST.md  dependabot.yml
Windows Task Scheduler/: .gitattributes  Clear Old Recycle Bin Items.xml  Delete Old Downloads.xml  Drive Space Monitor.xml  Monthly System Health Check.xml  PostgreSQL Gnucash Backup.xml  PostgreSQL job_scheduler Backup.xml  PostgreSQL timeline_data Backup.xml  Postgres Log Cleanup.xml  Sync Macrium Backups.xml
analysis/: ANALYSIS_REPORT.md  README.md  REPOSITORY_ISSUES.md  git-hooks-issue-001-hooks-not-installed.md  git-hooks-issue-002-precommit-framework-not-installed.md  git-hooks-issue-003-dual-hook-management.md  git-hooks-issue-004-hook-permissions.md  git-hooks-issue-005-platform-compatibility.md  my-scripts-claude-review.md  (+5 more)
(+629 files in other folders)
