[project]
name = "my-scripts-logging"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
)/
'''

[tool.bandit]
exclude_dirs = ["tests", "fixtures"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.2.0"
tag_format = "v$version"
